@@ -61,10 +61,11 @@ rendition_drv_la_SOURCES = \
 driverdir = @moduledir@
 dist_driver_DATA = \
 	v10002d.uc		\
-	v20002d.uc		\
-	vgafont-std.data	\
-	vgafont-vrx.data	\
-	vgapalette.data	
+	v20002d.uc
 
 EXTRA_DIST = \
-	README.uc
+	README.uc \
+	vgafont-std.data \
+	vgafont-vrx.data \
+	vgapalette.data
+                        
