@@ -1,3 +1,8 @@
+2005-11-11  Adam Jackson  <ajax@freedesktop.org>
+
+	* src/Makefile.am:
+	Monolith parity, only install the .uc files, not .data
+
 2005-11-09  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
